# black-hole-solitaire

./: .appveyor.yml  .disabled-appveyor.yml  .gitignore  .gitmodules  .hgignore  .tidyallrc  .travis.yml  README.asciidoc  README.md  appveyor.yml
.github/workflows/: use-github-actions.yml  windows-x64.yml
CI-testing/: translate-travis.yml-to-github-actions.py
black-hole-solitaire/: Difference-between-C-solvers.bash  Makefile  black-hole-solver.pl
black-hole-solitaire/CI-testing/: continuous-integration-testing.pl  translate-travis.yml-to-github-actions.py
black-hole-solitaire/Games-Solitaire-BlackHole-Solver/: .tidyallrc  Build.PL  Changes  MANIFEST  README  dist.ini
black-hole-solitaire/Games-Solitaire-BlackHole-Solver/lib/Games/Solitaire/BlackHole/: Solver.pm
black-hole-solitaire/Games-Solitaire-BlackHole-Solver/t/: 01-run.t  boilerplate.t
black-hole-solitaire/OLD/old-black-hole-only-c-solver/: README  black_hole_solver.h  black_hole_solver_main.c  config.h.in  fcs_hash.c
black-hole-solitaire/all-in-a-row-c-solver/: CMakeLists.txt  Tatzer  alloc.c  black_hole_solver.c  black_hole_solver.h  black_hole_solver_main.c  config.h.in  run-tests.pl  state.h  tokyo_cab_hash.h
black-hole-solitaire/all-in-a-row-c-solver/t/: output.t
black-hole-solitaire/all-in-a-row-c-solver/t/data/: 24.all_in_a_row.board.txt
black-hole-solitaire/all-in-a-row-gnu-parallel-range-solving/: Makefile  black-hole-from-sql.pl  collect.pl  compress-output.pl  lap-prepare.bash  monitoring-helpers.bash  prepare.bash  range-solving.bash  summarize.pl  validate-summary.pl
black-hole-solitaire/all-in-a-row-gnu-parallel-range-solving/docs/: README.txt  expand.pl
black-hole-solitaire/all-in-a-row-range-solving/: down-range-remote.pl  down-range.pl  fill-empty-solutions.sh  populate-summary-database.pl  stats.pl
black-hole-solitaire/all-in-a-row-range-solving/new-with-locked-files-and-quota/: get-quota  read-from-files-get-quota
black-hole-solitaire/all-in-a-row-verifier/: GOLF-TOTAL.bash  TOTAL.bash  WRAP-TOTAL.bash  verify_all_in_a_row.pl  verify_golf.pl  verify_wrap_golf.pl
black-hole-solitaire/all-in-a-row-verifier/Games/Solitaire/Verify/: All_in_a_Row.pm  Golf.pm
black-hole-solitaire/benchmark/: benchmark-c.bash  benchmark-perl-before-and-after-switch-tasking.bash  benchmark-perl.bash  benchmark-perl.pl
black-hole-solitaire/c-solver/: .tidyallrc  CMakeLists.txt  COPYING  Common.cmake  INSTALL  NEWS  NEWS.asciidoc  README  README.md  TODO  TODO.quicktask  Tatzer  Test-Boards-Seq.bash  alloc.c  alloc.h  bit_rw.h  black-hole-solver.spec.in  black_hole_solver.c  black_hole_solver.h  black_hole_solver_main.c  black_hole_solver_resume_api_main.c  buffer_overflow_main.c  config.h.in  fcs_hash.c  fcs_hash.h  google_hash.cpp  google_hash.h  inline.h  lib.c  libblack-hole-solver.pc.in  main_common.h  meta_alloc.c  meta_alloc.h  min_and_max.h  multi_solver.c  multi_solver_stats.c  rank_reach_prune.c  rank_reach_prune.h  run-tests.pl  single_board_main.c  (+6 more)
black-hole-solitaire/c-solver/cmake/: pod2man-wrapper.pl
black-hole-solitaire/c-solver/docs/: Proposed-Prune-for-Black-Hole-Solitaire-and-All-in-a-Row-Solitaire.txt
black-hole-solitaire/c-solver/include/black-hole-solver/: black_hole_solver.h  bool.h  fcs_dllexport.h
black-hole-solitaire/c-solver/man/: CMakeLists.txt  black-hole-solve.pod
black-hole-solitaire/c-solver/scripts/: Range-Compare.bash  gen-c-lookup-files.pl  my-rank-reach-test.pl  source_filter.py
black-hole-solitaire/c-solver/t/: all-in-a-row-output.t  black-hole-output.t  build-process.t  clang-format.t  output.t  perltidy.t  rank-reachability-prune.t  style-trailing-space.t  unit-max-num-cards-overflow.t  valgrind.t
black-hole-solitaire/c-solver/t/data/: 2.golf.board.txt  906.golf.board.txt
black-hole-solitaire/c-solver/t/data/texts/: list.txt
black-hole-solitaire/c-solver/t/data/texts/texts/: 2.golf.sol.txt  24.all_in_a_row.sol-with-display-boards.txt  24.all_in_a_row.sol.txt  26464608654870335080-disp-boards.bh.sol.txt  26464608654870335080-iters-step-1100.bh.sol.txt  26464608654870335080-iters-step.bh.sol.txt  26464608654870335080-with-max-iters.bh.sol.txt  906.golf.solution.txt  golf-1to20.sol.txt  golf1.board  golf11.board  golf12.board  golf13.board  golf14.board  golf15.board  golf16.board  golf17.board  golf18.board  golf19.board  golf20.board  golf3.board  golf6.board  golf7.board  golf8.board  golf9.board
black-hole-solitaire/c-solver/t/lib/BHsolver/: InlineWrap.pm  Paths.pm
black-hole-solitaire/c-solver/t/lib/Games/Solitaire/BlackHole/RankReachPrune/: PP.pm  XS.pm
black-hole-solitaire/old/: black-hole-solver.pl
black-hole-solitaire/probability/: calc-num-initial-deals-without-possible-moves.pl
black-hole-solitaire/python-bindings/cffi/: python_pypi_dist_manager.py  wrapper.py
black-hole-solitaire/python-bindings/cffi/code/: CHANGELOG.rst.base.txt  README.part.rst  requirements.txt
black-hole-solitaire/python-bindings/cffi/code/black_hole_solver/: __init__.py
black-hole-solitaire/python-bindings/cffi/code/examples/: black_hole_solver_example1.py  black_hole_solver_example2.py
black-hole-solitaire/python-bindings/cffi/code/tests/: test_bhs.py
black-hole-solitaire/python-bindings/cffi/pydistman/: __init__.py
black-hole-solitaire/range-solving/: down-range-remote.pl  down_range.bash  down_range_remote.bash  find-intractables.vala  id-serve  populate-summary-database.pl  stats.pl
black-hole-solitaire/range-solving/new-with-locked-files-and-quota/: bhs.params.good.txt  down-range.pl
black-hole-solitaire/rust-solver/: Cargo.toml
black-hole-solitaire/rust-solver/src/: black_hole_solver.rs  main.rs  rank_reach_prune.rs
black-hole-solitaire/scripts/: Range-Compare.bash  Tatzer  Test-Boards-Seq.bash  analyze-kpat-golf-solvers-verdicts.bash  bh-bench-2.bash  bh-collect-stats-1.bash  binary_star-pat-perl-range-solve.bash  binary_star-pat-perl-range-verify.pl  fuzz-build.bash  golf-bench-2.bash  golf-bench-3.bash  golf-bench.bash  golf-pat-perl-range-solve.bash  my-rank-reach-test.pl
(+6 files in other folders)
